Actividad 3: Breve corrección

--- a/Actividades/Actividad 3/Actividad 3.ipynb
+++ b/Actividades/Actividad 3/Actividad 3.ipynb
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importante destacar, que para el desarrollo de esta experiencia se utilizarán *chunks* como formato para almacenar el archivo `HDF5`, dado que será bastante conveniente al momento de aplicar el kernel durante el ítem 1 del paso 2. Notar que se usó un chunk de $20 \\times 20$ porque al dividir la cantidad de filas y columnas por este valor, se obtiene un entero."
+    "Importante destacar, que para el desarrollo de esta experiencia se utilizarán *chunks* como formato para almacenar el archivo `HDF5`, dado que será bastante conveniente al momento de aplicar el kernel durante el ítem 1 del paso 2. Se usa un chunk de $100 \\times 100 \\times 1$ porque se considera óptimo: la idea no es us"
    ]
   },
   {
