Activity 6: Preliminary Version 2

--- a/Actividades/Actividad 6/Actividad6.ipynb
+++ b/Actividades/Actividad 6/Actividad6.ipynb
@@ -271,46 +271,68 @@
     "    for j in range(n):\n",
     "        hist[lbp_image[i,j]] += 1\n",
     "```\n",
-    "por"
+    "que lo único que hacen es contar cuantas veces se repite un número del 0 al 255 en `lbp_image`. Resulta mucho más conveniente iterar desde el 0 al 255 y usar funciones de numpy que nos diga cuantas veces se repite este número. Para ello, usaremos `np.count_nonzero`. En consiguiente reemplazamos el doble `for` mostrado anteriormente por:\n",
+    "```python\n",
+    "for i in range(256):\n",
+    "    hist[i] = np.count_nonzero(lbp_image == i)\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "arrays used as indices must be of integer (or boolean) type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-ece3604ba923>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mhist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mlbp_histogram\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-15-ece3604ba923>\u001b[0m in \u001b[0;36mlbp_histogram\u001b[0;34m(image)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mhist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m#print (lbp_image)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mhist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlbp_image\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;31m#for i in range(m):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m#    for j in range(n):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: arrays used as indices must be of integer (or boolean) type"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def lbp_histogram(image):\n",
+    "def lbp_histogram_new(image):\n",
     "    \"\"\"\n",
     "    Compute lbp histogram representation of image\n",
     "    \"\"\"\n",
     "    lbp_image = lbp_representation(image)\n",
     "    m,n = lbp_image.shape\n",
     "    hist = np.zeros(256)\n",
-    "    #print (lbp_image)\n",
-    "    for i in range(m):\n",
-    "        for j in range(n):\n",
-    "            hist[lbp_image[i,j]] += 1\n",
-    "    print (hist)\n",
-    "    return hist \n",
-    "\n",
-    "lbp_histogram(img)"
+    "    for i in range(256):\n",
+    "        hist[i] = np.count_nonzero(lbp_image == i)\n",
+    "    return hist"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por otro lado, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "*** Profile printout saved to text file 'lbp_histogram_lprof'. \n"
+     ]
+    }
+   ],
+   "source": [
+    "%lprun -T lbp_histogram_lprof_new -f lbp_histogram_new lbp_histogram_new(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
