Activity 6: Preliminary Version 3

--- a/Actividades/Actividad 6/Actividad6.ipynb
+++ b/Actividades/Actividad 6/Actividad6.ipynb
@@ -279,10 +279,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por otro lado, en el profiling arrojado en la sección 2.1, existe otro cuello de botella dada por la línea:\n",
+    "```python\n",
+    "lbp_image = lbp_representation(image)\n",
+    "```\n",
+    "En consecuencia, haremos un line profiling para detectar los cuellos de botella en `lbp_representation(image)`:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "*** Profile printout saved to text file 'lbp_representation_lprof'. \n"
+     ]
+    }
+   ],
+   "source": [
+    "%lprun -T lbp_representation_lprof -f lbp_representation lbp_representation(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Posteriormente, leemos el resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timer unit: 1e-06 s\n",
+      "\n",
+      "Total time: 34.3836 s\n",
+      "File: <ipython-input-2-e53e5d40ad48>\n",
+      "Function: lbp_representation at line 9\n",
+      "\n",
+      "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
+      "==============================================================\n",
+      "     9                                           def lbp_representation(image):\n",
+      "    10                                               \"\"\"\n",
+      "    11                                               Compute lbp representation of image\n",
+      "    12                                               \"\"\"\n",
+      "    13         1            4      4.0      0.0      m,n = image.shape\n",
+      "    14         1           10     10.0      0.0      ret = np.empty((m-2,n-2))\n",
+      "    15      1465          635      0.4      0.0      for i in range(1,m-1):\n",
+      "    16   3576552      1874693      0.5      5.5          for j in range(1,n-1):\n",
+      "    17   3575088     32508209      9.1     94.5              ret[i-1,j-1] = lbp(image[i-1:i+2, j-1:j+2])\n",
+      "    18         1            1      1.0      0.0      return ret\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(open('lbp_representation_lprof', 'r').read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Del informe anterior, se puede observar que el cuello de botella de la función `lbp_representation(image)` está en la línea \n",
+    "```python\n",
+    "ret[i-1,j-1] = lbp(image[i-1:i+2, j-1:j+2])\n",
+    "```\n",
+    "que ocupa un 94.5% de tiempo de ejecución de `lbp_representation(image)`. Esto quiere decir que algo malo hay en `lbp(region)`.\n",
+    "\n",
+    "De la misma forma que lo hicimos con las otras funciones, haremos un line profiling para detectar los cuellos de botella de `lbp(region)`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Borrador\n",
+    "\n",
+    "<p style=\"color: red\"> Código final que contiene todas las modificaciones necesarias que eliminan los cuellos de botella </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -297,51 +402,6 @@
     "        hist[i] = np.count_nonzero(lbp_image == i)\n",
     "    return hist"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Por otro lado, "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "*** Profile printout saved to text file 'lbp_histogram_lprof'. \n"
-     ]
-    }
-   ],
-   "source": [
-    "%lprun -T lbp_histogram_lprof_new -f lbp_histogram_new lbp_histogram_new(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
